@@ -344,8 +344,8 @@ verilog/inc1.v:146: //==========================================================
 verilog/inc1.v:147: // Quotes are legal in protected blocks.  Grr.
 verilog/inc1.v:148: module prot();
 verilog/inc1.v:149: `protected
-verilog/inc1.v:149:     I!#r#e6<_Q{{E2+]I3<[3s)1@D|'E''i!O?]jD>Jo_![Cl)
-verilog/inc1.v:149:     #nj1]p,3^1~,="E@QZB\T)eU\pC#C|7=\$J$##A[@-@{Qk]
+verilog/inc1.v:150:     I!#r#e6<_Q{{E2+]I3<[3s)1@D|'E''i!O?]jD>Jo_![Cl)
+verilog/inc1.v:151:     #nj1]p,3^1~,="E@QZB\T)eU\pC#C|7=\$J$##A[@-@{Qk]
 verilog/inc1.v:152: `endprotected
 verilog/inc1.v:153: endmodule
 verilog/inc1.v:154: //"
