@@ -6,6 +6,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.413 devel
 
+****	Add Parser useProtected argument to aid runtime, bug899. [Corey Teffetalor]
+
 
 * Verilog::Language 3.412 2015-03-16
 
